# qml-and-cpp

./: BackgroudColor.qml  BannerPage.qml  CMakeLists.txt  GridPage.qml  ImageButton.qml  LayoutBottomView.qml  LayoutHeaderView.qml  LayoutPageView.qml  Main.qml  MusicIcon.qml  Play_song.qml  PlaylistModel.h  README.md  RecommendPage.qml  SearchPage.qml  importmusic.cpp  importmusic.h  lyricshandler.cpp  lyricshandler.h  main.cpp
